Fixed multicol button not showing up from conflict, removed link to direct footer styles.

--- a/styles/sections/multicolumn.css
+++ b/styles/sections/multicolumn.css
@@ -226,6 +226,7 @@
 .multicolumn-card {
   @apply
     flex
+    flex-wrap
     relative
     box-border;
 
@@ -233,6 +234,13 @@
     @apply
       m-auto
       p-10;
+
+    .image-above &,
+    .image-below & {
+      @apply
+        flex-grow
+        basis-full;
+    }
 
     & .link {
       @apply
@@ -253,18 +261,21 @@
   }
 
   &__image-wrapper {
-    @apply
-      m-auto
-      w-full;
+    @apply m-auto;
 
     &--third-width {
       @apply
-        w-1/3;
+        basis-1/3;
     }
 
     &--half-width {
       @apply
-        !w-1/2;
+        basis-1/2;
+    }
+
+    &--full-width {
+      @apply
+        flex-grow w-full;
     }
   }
 
@@ -274,8 +285,3 @@
     overflow: hidden;
   }
 }
-
-/* .multicolumn.background-primary .multicolumn-card {
-  background: rgb(var(--color-background))
-    linear-gradient(rgb(var(--color-foreground) .04), rgb(var(--color-foreground) .04));
-} */
